--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -25,6 +25,8 @@
   </mat-error>
 </mat-form-field>
 
+<mat-card-title>Contatos</mat-card-title>
+
     <!-- Contato -->
     <mat-form-field appearance="outline">
       <mat-label>Celular</mat-label>
@@ -48,6 +50,8 @@
       </mat-error>
     </mat-form-field>
 
+    <mat-card-title>Endereço</mat-card-title>
+    
     <!-- Endereço -->
     <mat-form-field appearance="outline">
       <mat-label>Rua</mat-label>
