--- a/src/app/component/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/component/cliente/cliente-delete/cliente-delete.component.html
@@ -17,6 +17,12 @@
       <input matInput [value]="cliente.conEmail" name="conEmail" disabled>
     </mat-form-field>
 
+
+     <mat-form-field appearance="outline">
+      <mat-label>Celular*</mat-label>
+      <input matInput [value]="cliente.conCelular" name="conCelular" disabled>
+    </mat-form-field>
+
     <mat-form-field appearance="outline">
       <mat-label>Telefone Comercial*</mat-label>
       <input matInput [value]="cliente.conTelefoneComercial" name="conTelefoneComercial" disabled>
