--- a/src/app/component/funcionario/funcionario-delete/funcionario-delete.component.html
+++ b/src/app/component/funcionario/funcionario-delete/funcionario-delete.component.html
@@ -1,1 +1,43 @@
-<p>funcionario-delete works!</p>
+<mat-card>
+  <mat-card-title>Excluir Funcionário</mat-card-title>
+  <form>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Nome do Funcionário*</mat-label>
+      <input matInput [value]="funcionario.funNome" name="funNome" disabled>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>CPF*</mat-label>
+      <input matInput [value]="funcionario.funCpf" name="funCpf" disabled>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Email*</mat-label>
+      <input matInput [value]="funcionario.conEmail" name="conEmail" disabled>
+    </mat-form-field>
+
+
+    <mat-form-field appearance="outline">
+      <mat-label>Celular*</mat-label>
+      <input matInput [value]="funcionario.conCelular" name="conCelular" disabled>
+    </mat-form-field>
+    
+
+    <mat-form-field appearance="outline">
+      <mat-label>Telefone Comercial*</mat-label>
+      <input matInput [value]="funcionario.conTelefoneComercial" name="conTelefoneComercial" disabled>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Endereço*</mat-label>
+      <input matInput
+        [value]="funcionario.endRua + ', ' + funcionario.endNumero + ', ' + funcionario.endCidade + ' - ' + funcionario.endEstado + ' (' + funcionario.endCep + ')'"
+        name="endereco" disabled>
+    </mat-form-field>
+
+  </form>
+
+  <button mat-raised-button (click)="deleteFuncionario()" color="warn">Excluir</button>
+  <button mat-raised-button (click)="cancel()">Cancelar</button>
+</mat-card>
