--- a/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
+++ b/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
@@ -1,1 +1,65 @@
-<p>funcionario-read works!</p>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="funcionarios">
+<ng-container matColumnDef="funId">
+    <th mat-header-cell *matHeaderCellDef>Id</th>
+    <td mat-cell *matCellDef="let row">{{row.funId}}</td>
+</ng-container>
+
+<ng-container matColumnDef="funNome">
+    <th mat-header-cell *matHeaderCellDef>Nome Funcionário</th>
+    <td mat-cell *matCellDef="let row">{{row.funNome}}</td>
+</ng-container>
+
+
+<ng-container matColumnDef="funCpf">
+    <th mat-header-cell *matHeaderCellDef>Cpf</th>
+    <td mat-cell *matCellDef="let row">{{row.funCpf}}</td>
+</ng-container>
+
+<!-- Email -->
+<ng-container matColumnDef="conEmail">
+  <th mat-header-cell *matHeaderCellDef>Email</th>
+  <td mat-cell *matCellDef="let row">{{ row.conEmail }}</td>
+</ng-container>
+
+<!-- Telefone Comercial -->
+<ng-container matColumnDef="conTelefoneComercial">
+  <th mat-header-cell *matHeaderCellDef>Telefone</th>
+  <td mat-cell *matCellDef="let row">{{ row.conTelefoneComercial }}</td>
+</ng-container>
+
+<!-- Celular -->
+<ng-container matColumnDef="conCelular">
+  <th mat-header-cell *matHeaderCellDef>Celular</th>
+  <td mat-cell *matCellDef="let row">{{ row.conCelular }}</td>
+</ng-container>
+
+<!-- Data Admissão -->
+<ng-container matColumnDef="funDataAdmissao">
+  <th mat-header-cell *matHeaderCellDef>Data de Admissão</th>
+  <td mat-cell *matCellDef="let row">{{ row.funDataAdmissao | date:'dd/MM/yyyy' }}</td>
+</ng-container>
+
+<!-- Endereço formatado -->
+<ng-container matColumnDef="enderecoCompleto">
+  <th mat-header-cell *matHeaderCellDef>Endereço</th>
+  <td mat-cell *matCellDef="let row">
+    {{ row.endRua }}, {{ row.endNumero }} - {{ row.endCidade }} / {{ row.endEstado }} ({{ row.endCep }})
+  </td>
+</ng-container>
+
+<ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Ações</th>
+    <td mat-cell *matCellDef="let row">
+        <a routerLink="/funcionarios/update/{{ row.funId }}" class="edit">
+            <i class="material-icons">edit</i>
+        </a>
+        <a routerLink="/funcionarios/delete/{{ row.funId }}" class = "delete">
+            <i class="material-icons">delete</i>
+        </a>
+    </td>
+</ng-container>
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
