--- a/src/app/component/funcionario/funcionario-update/funcionario-update.component.html
+++ b/src/app/component/funcionario/funcionario-update/funcionario-update.component.html
@@ -1,1 +1,87 @@
-<p>funcionario-update works!</p>
+<mat-card>
+  <mat-card-title>Alterar Funcionário</mat-card-title>
+
+  <form #clienteForm="ngForm" (ngSubmit)="updateFuncionario()">
+    <!-- Nome e CPF -->
+    <mat-form-field appearance="outline">
+      <mat-label>Nome do Funcionário*</mat-label>
+      <input matInput [(ngModel)]="funcionario.funNome" name="funNome" required #funNome="ngModel">
+      <mat-error *ngIf="funNome.invalid && funNome.touched">Nome é obrigatório.</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>CPF*</mat-label>
+      <input matInput
+             [(ngModel)]="funcionario.funCpf"
+             name="funCpf"
+             required
+             mask="000.000.000-00"
+             [dropSpecialCharacters]="false"
+             minlength="14"
+             maxlength="14"
+             #funCpf="ngModel">
+      <mat-error *ngIf="funCpf.invalid && funCpf.touched">CPF inválido ou incompleto.</mat-error>
+    </mat-form-field>
+
+
+  <mat-card-title>Contatos</mat-card-title>
+
+    <!-- Contato -->
+
+
+        
+    <mat-form-field appearance="outline">
+      <mat-label>Celular</mat-label>
+      <input matInput [(ngModel)]="funcionario.conCelular" name="conCelular">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Telefone Comercial</mat-label>
+      <input matInput [(ngModel)]="funcionario.conTelefoneComercial" name="conTelefoneComercial">
+    </mat-form-field>
+
+      <mat-form-field appearance="outline">
+      <mat-label>Email*</mat-label>
+      <input matInput [(ngModel)]="funcionario.conEmail" name="conEmail" type="email" required #conEmail="ngModel">
+      <mat-error *ngIf="conEmail.invalid && conEmail.touched">Email inválido ou obrigatório.</mat-error>
+    </mat-form-field>
+
+
+      <mat-card-title>Endereço</mat-card-title>
+
+    <!-- Endereço -->
+    <mat-form-field appearance="outline">
+      <mat-label>Rua*</mat-label>
+      <input matInput [(ngModel)]="funcionario.endRua" name="endRua" required #endRua="ngModel">
+      <mat-error *ngIf="endRua.invalid && endRua.touched">Rua é obrigatória.</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Número*</mat-label>
+      <input matInput [(ngModel)]="funcionario.endNumero" name="endNumero" required #endNumero="ngModel">
+      <mat-error *ngIf="endNumero.invalid && endNumero.touched">Número é obrigatório.</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Cidade*</mat-label>
+      <input matInput [(ngModel)]="funcionario.endCidade" name="endCidade" required #endCidade="ngModel">
+      <mat-error *ngIf="endCidade.invalid && endCidade.touched">Cidade é obrigatória.</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>CEP*</mat-label>
+      <input matInput [(ngModel)]="funcionario.endCep" name="endCep" required #endCep="ngModel">
+      <mat-error *ngIf="endCep.invalid && endCep.touched">CEP é obrigatório.</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Estado*</mat-label>
+      <input matInput [(ngModel)]="funcionario.endEstado" name="endEstado" required #endEstado="ngModel">
+      <mat-error *ngIf="endEstado.invalid && endEstado.touched">Estado é obrigatório.</mat-error>
+    </mat-form-field>
+
+    <!-- Botões -->
+    <button mat-raised-button color="primary" type="submit">Atualizar</button>
+    <button mat-raised-button type="button" (click)="cancel()">Cancelar</button>
+  </form>
+</mat-card>
