--- a/src/app/component/funcionario/funcionario-delete/funcionario-delete.component.html
+++ b/src/app/component/funcionario/funcionario-delete/funcionario-delete.component.html
@@ -17,6 +17,10 @@
       <input matInput [value]="funcionario.conEmail" name="conEmail" disabled>
     </mat-form-field>
 
+<mat-form-field appearance="outline">
+  <mat-label>Cargo*</mat-label>
+  <input matInput [value]="getCargoNomeById(funcionario.carId)" disabled>
+</mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Celular*</mat-label>
