--- a/src/app/component/cliente/cliente-create/cliente-create.component.html
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.html
@@ -5,7 +5,8 @@
     <!-- Nome e CPF -->
     <mat-form-field appearance="outline">
       <mat-label>Nome</mat-label>
-      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required #cliNome="ngModel">
+      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required maxlength="100" #cliNome="ngModel"
+       (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="cliNome.invalid && cliNome.touched">
         Nome é obrigatório.
       </mat-error>
@@ -27,35 +28,50 @@
 
 <mat-card-title>Contatos</mat-card-title>
 
-    <!-- Contato -->
-    <mat-form-field appearance="outline">
-      <mat-label>Celular</mat-label>
-      <input matInput [(ngModel)]="cliente.conCelular" name="conCelular" required #conCelular="ngModel">
-      <mat-error *ngIf="conCelular.invalid && conCelular.touched">
-        Celular é obrigatório.
-      </mat-error>
-    </mat-form-field>
+<mat-form-field appearance="outline">
+  <mat-label>Celular</mat-label>
+  <input matInput
+         [(ngModel)]="cliente.conCelular"
+         name="conCelular"
+         required
+         mask="(00) 00000-0000"
+         #conCelular="ngModel">
+  <mat-error *ngIf="conCelular.invalid && conCelular.touched">
+    Celular é obrigatório.
+  </mat-error>
+</mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Telefone Comercial</mat-label>
-      <input matInput [(ngModel)]="cliente.conTelefoneComercial" name="conTelefoneComercial">
+      <input matInput 
+      [(ngModel)]="cliente.conTelefoneComercial"
+       name="conTelefoneComercial"
+        maxlength="20"
+         #conTelefoneComercial="ngModel"
+           mask="(00) 00000-0000">
     </mat-form-field>
 
- 
-    <mat-form-field appearance="outline">
-      <mat-label>Email</mat-label>
-      <input matInput [(ngModel)]="cliente.conEmail" name="conEmail" type="email" required #conEmail="ngModel">
-      <mat-error *ngIf="conEmail.invalid && conEmail.touched">
-        Email inválido ou obrigatório.
-      </mat-error>
-    </mat-form-field>
+<mat-form-field appearance="outline">
+  <mat-label>Email</mat-label>
+  <input matInput [(ngModel)]="cliente.conEmail"
+         name="conEmail"
+         type="email"
+         required
+         maxlength="55"
+         pattern="^[a-zA-Z0-9._%+-]+@gmail\.com$"
+         #conEmail="ngModel">
+  <mat-error *ngIf="conEmail.invalid && conEmail.touched">
+    O e-mail deve ser do Gmail e estar no formato correto (ex: exemplo@gmail.com).
+  </mat-error>
+</mat-form-field>
 
     <mat-card-title>Endereço</mat-card-title>
     
     <!-- Endereço -->
     <mat-form-field appearance="outline">
       <mat-label>Rua</mat-label>
-      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required #endRua="ngModel">
+      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required maxlength="50" #endRua="ngModel"
+        (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endRua.invalid && endRua.touched">
         Rua é obrigatória.
       </mat-error>
@@ -63,7 +79,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Número</mat-label>
-      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required #endNumero="ngModel">
+      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required maxlength="15" #endNumero="ngModel"
+         (keypress)="apenasNumeros($event)">
       <mat-error *ngIf="endNumero.invalid && endNumero.touched">
         Número é obrigatório.
       </mat-error>
@@ -71,23 +88,31 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Cidade</mat-label>
-      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required #endCidade="ngModel">
+      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required maxlength="100" #endCidade="ngModel"
+        (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endCidade.invalid && endCidade.touched">
         Cidade é obrigatória.
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>CEP</mat-label>
-      <input matInput [(ngModel)]="cliente.endCep" name="endCep" required #endCep="ngModel">
-      <mat-error *ngIf="endCep.invalid && endCep.touched">
-        CEP é obrigatório.
-      </mat-error>
-    </mat-form-field>
+ <mat-form-field appearance="outline">
+  <mat-label>CEP</mat-label>
+  <input matInput [(ngModel)]="cliente.endCep"
+         name="endCep"
+         required
+         maxlength="8"
+         #endCep="ngModel"
+         (keypress)="apenasNumeros($event)"
+         (paste)="bloquearPasteNumeros($event)">
+  <mat-error *ngIf="endCep.invalid && endCep.touched">
+    CEP é obrigatório e deve conter apenas números.
+  </mat-error>
+</mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>Estado</mat-label>
-      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required #endEstado="ngModel">
+      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required maxlength="100" #endEstado="ngModel"
+        (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endEstado.invalid && endEstado.touched">
         Estado é obrigatório.
       </mat-error>
