--- a/src/app/component/cliente/cliente-update/cliente-update.component.html
+++ b/src/app/component/cliente/cliente-update/cliente-update.component.html
@@ -4,13 +4,14 @@
   <form #clienteForm="ngForm" (ngSubmit)="updateCliente()">
     <!-- Nome e CPF -->
     <mat-form-field appearance="outline">
-      <mat-label>Nome do Cliente*</mat-label>
-      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required #cliNome="ngModel">
+      <mat-label>Nome do Cliente</mat-label>
+      <input matInput [(ngModel)]="cliente.cliNome" name="cliNome" required maxlength="100" #cliNome="ngModel"
+          (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="cliNome.invalid && cliNome.touched">Nome é obrigatório.</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>CPF*</mat-label>
+      <mat-label>CPF</mat-label>
       <input matInput
              [(ngModel)]="cliente.cliCpf"
              name="cliCpf"
@@ -26,20 +27,39 @@
 
     <!-- Contato -->
 
-    <mat-form-field appearance="outline">
-      <mat-label>Telefone Comercial</mat-label>
-      <input matInput [(ngModel)]="cliente.conTelefoneComercial" name="conTelefoneComercial">
-    </mat-form-field>
-
     
     <mat-form-field appearance="outline">
       <mat-label>Celular</mat-label>
-      <input matInput [(ngModel)]="cliente.conCelular" name="conCelular">
+      <input matInput 
+      [(ngModel)]="cliente.conCelular"
+       name="conCelular"
+       required
+        mask="(00) 00000-0000"
+         #conCelular="ngModel">
+          <mat-error *ngIf="conCelular.invalid && conCelular.touched">
+    Celular é obrigatório.
+  </mat-error>
+    </mat-form-field>
+
+
+        <mat-form-field appearance="outline">
+      <mat-label>Telefone Comercial</mat-label>
+      <input matInput
+       [(ngModel)]="cliente.conTelefoneComercial"
+        name="conTelefoneComercial"
+          mask="(00) 00000-0000">
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Email*</mat-label>
-      <input matInput [(ngModel)]="cliente.conEmail" name="conEmail" type="email" required #conEmail="ngModel">
+      <mat-label>Email</mat-label>
+      <input matInput 
+      [(ngModel)]="cliente.conEmail"
+       name="conEmail"
+        type="email" 
+        maxlength="55"
+          pattern="^[a-zA-Z0-9._%+-]+@gmail\.com$"
+        required 
+        #conEmail="ngModel">
       <mat-error *ngIf="conEmail.invalid && conEmail.touched">Email inválido ou obrigatório.</mat-error>
     </mat-form-field>
 
@@ -48,32 +68,37 @@
 
     <!-- Endereço -->
     <mat-form-field appearance="outline">
-      <mat-label>Rua*</mat-label>
-      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required #endRua="ngModel">
+      <mat-label>Rua</mat-label>
+      <input matInput [(ngModel)]="cliente.endRua" name="endRua" required maxlength="50" #endRua="ngModel"
+              (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endRua.invalid && endRua.touched">Rua é obrigatória.</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Número*</mat-label>
-      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required #endNumero="ngModel">
+      <mat-label>Número</mat-label>
+      <input matInput [(ngModel)]="cliente.endNumero" name="endNumero" required maxlength="15" #endNumero="ngModel"
+                 (paste)="bloquearPasteNumeros($event)">
       <mat-error *ngIf="endNumero.invalid && endNumero.touched">Número é obrigatório.</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Cidade*</mat-label>
-      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required #endCidade="ngModel">
+      <mat-label>Cidade</mat-label>
+      <input matInput [(ngModel)]="cliente.endCidade" name="endCidade" required maxlength="100" #endCidade="ngModel"
+              (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endCidade.invalid && endCidade.touched">Cidade é obrigatória.</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
       <mat-label>CEP*</mat-label>
-      <input matInput [(ngModel)]="cliente.endCep" name="endCep" required #endCep="ngModel">
+      <input matInput [(ngModel)]="cliente.endCep" name="endCep" required maxlength="8" #endCep="ngModel"
+       (paste)="bloquearPasteNumeros($event)">
       <mat-error *ngIf="endCep.invalid && endCep.touched">CEP é obrigatório.</mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
-      <mat-label>Estado*</mat-label>
-      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required #endEstado="ngModel">
+      <mat-label>Estado</mat-label>
+      <input matInput [(ngModel)]="cliente.endEstado" name="endEstado" required maxlength="100" #endEstado="ngModel"
+         (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endEstado.invalid && endEstado.touched">Estado é obrigatório.</mat-error>
     </mat-form-field>
 
