--- a/src/app/component/funcionario/funcionario-create/funcionario-create.component.html
+++ b/src/app/component/funcionario/funcionario-create/funcionario-create.component.html
@@ -5,7 +5,8 @@
     <!-- Nome e CPF -->
     <mat-form-field appearance="outline">
       <mat-label>Nome</mat-label>
-      <input matInput [(ngModel)]="funcionario.funNome" name="funNome" required #funNome="ngModel">
+      <input matInput [(ngModel)]="funcionario.funNome" name="funNome" required maxlength="100" #funNome="ngModel"
+      (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="funNome.invalid && funNome.touched">
         Nome é obrigatório.
       </mat-error>
@@ -47,7 +48,7 @@
     <!-- Contato -->
     <mat-form-field appearance="outline">
       <mat-label>Celular</mat-label>
-      <input matInput [(ngModel)]="funcionario.conCelular" name="conCelular" required #conCelular="ngModel">
+      <input matInput [(ngModel)]="funcionario.conCelular" name="conCelular" mask="(00) 00000-0000" required #conCelular="ngModel">
       <mat-error *ngIf="conCelular.invalid && conCelular.touched">
         Celular é obrigatório.
       </mat-error>
@@ -55,13 +56,13 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Telefone Comercial</mat-label>
-      <input matInput [(ngModel)]="funcionario.conTelefoneComercial" name="conTelefoneComercial">
+      <input matInput [(ngModel)]="funcionario.conTelefoneComercial" mask="(00) 00000-0000" name="conTelefoneComercial">
     </mat-form-field>
 
  
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput [(ngModel)]="funcionario.conEmail" name="conEmail" type="email" required #conEmail="ngModel">
+      <input matInput [(ngModel)]="funcionario.conEmail" name="conEmail" type="email" required     pattern="^[a-zA-Z0-9._%+-]+@gmail\.com$" maxlength="55" #conEmail="ngModel">
       <mat-error *ngIf="conEmail.invalid && conEmail.touched">
         Email inválido ou obrigatório.
       </mat-error>
@@ -72,7 +73,8 @@
     <!-- Endereço -->
     <mat-form-field appearance="outline">
       <mat-label>Rua</mat-label>
-      <input matInput [(ngModel)]="funcionario.endRua" name="endRua" required #endRua="ngModel">
+      <input matInput [(ngModel)]="funcionario.endRua" name="endRua" required maxlength="50" #endRua="ngModel"
+          (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endRua.invalid && endRua.touched">
         Rua é obrigatória.
       </mat-error>
@@ -80,7 +82,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Número</mat-label>
-      <input matInput [(ngModel)]="funcionario.endNumero" name="endNumero" required #endNumero="ngModel">
+      <input matInput [(ngModel)]="funcionario.endNumero" name="endNumero" required maxlength="15" #endNumero="ngModel"
+          (keypress)="apenasNumeros($event)">
       <mat-error *ngIf="endNumero.invalid && endNumero.touched">
         Número é obrigatório.
       </mat-error>
@@ -88,7 +91,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Cidade</mat-label>
-      <input matInput [(ngModel)]="funcionario.endCidade" name="endCidade" required #endCidade="ngModel">
+      <input matInput [(ngModel)]="funcionario.endCidade" name="endCidade" required maxlength="100" #endCidade="ngModel"
+        (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endCidade.invalid && endCidade.touched">
         Cidade é obrigatória.
       </mat-error>
@@ -96,7 +100,9 @@
 
     <mat-form-field appearance="outline">
       <mat-label>CEP</mat-label>
-      <input matInput [(ngModel)]="funcionario.endCep" name="endCep" required #endCep="ngModel">
+      <input matInput [(ngModel)]="funcionario.endCep" name="endCep" required maxlength="8" #endCep="ngModel"
+         (keypress)="apenasNumeros($event)"
+         (paste)="bloquearPasteNumeros($event)">
       <mat-error *ngIf="endCep.invalid && endCep.touched">
         CEP é obrigatório.
       </mat-error>
@@ -104,7 +110,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Estado</mat-label>
-      <input matInput [(ngModel)]="funcionario.endEstado" name="endEstado" required #endEstado="ngModel">
+      <input matInput [(ngModel)]="funcionario.endEstado" name="endEstado" required maxlength="100" #endEstado="ngModel"
+            (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endEstado.invalid && endEstado.touched">
         Estado é obrigatório.
       </mat-error>
