--- a/src/app/component/supplier/supplier-create/supplier-create.component.html
+++ b/src/app/component/supplier/supplier-create/supplier-create.component.html
@@ -9,7 +9,9 @@
              [(ngModel)]="supplier.forRazaoSocial"
              name="forRazaoSocial"
              required
-             #forRazaoSocial="ngModel">
+             maxlength="100"
+             #forRazaoSocial="ngModel"
+            (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="forRazaoSocial.invalid && forRazaoSocial.touched">
         Razão Social é obrigatória.
       </mat-error>
@@ -22,7 +24,9 @@
          [(ngModel)]="supplier.forNomeFantasia"
          name="forNomeFantasia"
          required
-         #forNomeFantasia="ngModel">
+         #forNomeFantasia="ngModel"
+         maxlength="100"
+        (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
   <mat-error *ngIf="forNomeFantasia.invalid && forNomeFantasia.touched">
     Nome da Fantasia é obrigatório.
   </mat-error>
@@ -42,12 +46,12 @@
   </mat-error>
 </mat-form-field>
 
-
+<mat-card-title>Contatos</mat-card-title>
 
     <!-- Contato -->
     <mat-form-field appearance="outline">
       <mat-label>Celular</mat-label>
-      <input matInput [(ngModel)]="supplier.conCelular" name="conCelular" required #conCelular="ngModel">
+      <input matInput [(ngModel)]="supplier.conCelular" mask="(00) 00000-0000" name="conCelular" required #conCelular="ngModel">
       <mat-error *ngIf="conCelular.invalid && conCelular.touched">
         Celular é obrigatório.
       </mat-error>
@@ -55,22 +59,25 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Telefone Comercial</mat-label>
-      <input matInput [(ngModel)]="supplier.conTelefoneComercial" name="conTelefoneComercial">
+      <input matInput [(ngModel)]="supplier.conTelefoneComercial"  mask="(00) 00000-0000" name="conTelefoneComercial">
     </mat-form-field>
 
  
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput [(ngModel)]="supplier.conEmail" name="conEmail" type="email" required #conEmail="ngModel">
+      <input matInput [(ngModel)]="supplier.conEmail" name="conEmail"   pattern="^[a-zA-Z0-9._%+-]+@gmail\.com$" maxlength="55" type="email" required #conEmail="ngModel">
       <mat-error *ngIf="conEmail.invalid && conEmail.touched">
         Email inválido ou obrigatório.
       </mat-error>
     </mat-form-field>
 
+    <mat-card-title>Endereço</mat-card-title>
+
     <!-- Endereço -->
     <mat-form-field appearance="outline">
       <mat-label>Rua</mat-label>
-      <input matInput [(ngModel)]="supplier.endRua" name="endRua" required #endRua="ngModel">
+      <input matInput [(ngModel)]="supplier.endRua" name="endRua" required #endRua="ngModel" maxlength="50"
+       (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endRua.invalid && endRua.touched">
         Rua é obrigatória.
       </mat-error>
@@ -78,7 +85,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Número</mat-label>
-      <input matInput [(ngModel)]="supplier.endNumero" name="endNumero" required #endNumero="ngModel">
+      <input matInput [(ngModel)]="supplier.endNumero" name="endNumero" required #endNumero="ngModel" maxlength="15"
+          (keypress)="apenasNumeros($event)">
       <mat-error *ngIf="endNumero.invalid && endNumero.touched">
         Número é obrigatório.
       </mat-error>
@@ -86,7 +94,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Cidade</mat-label>
-      <input matInput [(ngModel)]="supplier.endCidade" name="endCidade" required #endCidade="ngModel">
+      <input matInput [(ngModel)]="supplier.endCidade" name="endCidade" required #endCidade="ngModel" maxlength="100"
+       (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endCidade.invalid && endCidade.touched">
         Cidade é obrigatória.
       </mat-error>
@@ -94,7 +103,9 @@
 
     <mat-form-field appearance="outline">
       <mat-label>CEP</mat-label>
-      <input matInput [(ngModel)]="supplier.endCep" name="endCep" required #endCep="ngModel">
+      <input matInput [(ngModel)]="supplier.endCep" name="endCep" required #endCep="ngModel" maxlength="8"
+        (keypress)="apenasNumeros($event)"
+         (paste)="bloquearPasteNumeros($event)">  
       <mat-error *ngIf="endCep.invalid && endCep.touched">
         CEP é obrigatório.
       </mat-error>
@@ -102,7 +113,8 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Estado</mat-label>
-      <input matInput [(ngModel)]="supplier.endEstado" name="endEstado" required #endEstado="ngModel">
+      <input matInput [(ngModel)]="supplier.endEstado" name="endEstado" required maxlength="100" #endEstado="ngModel" 
+        (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endEstado.invalid && endEstado.touched">
         Estado é obrigatório.
       </mat-error>
