--- a/src/app/component/supplier/supplier-update/supplier-update.component.html
+++ b/src/app/component/supplier/supplier-update/supplier-update.component.html
@@ -10,7 +10,9 @@
              [(ngModel)]="supplier.forRazaoSocial"
              name="forRazaoSocial"
              required
-             #forRazaoSocial="ngModel">
+             #forRazaoSocial="ngModel"
+             maxlength="100"
+            (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="forRazaoSocial.invalid && forRazaoSocial.touched">
         Razão Social é obrigatória.
       </mat-error>
@@ -24,7 +26,9 @@
              [(ngModel)]="supplier.forNomeFantasia"
              name="forNomeFantasia"
              required
-             #forNomeFantasia="ngModel">
+             #forNomeFantasia="ngModel"
+             maxlength="100"
+            (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="forNomeFantasia.invalid && forNomeFantasia.touched">
         Nome da Fantasia é obrigatório.
       </mat-error>
@@ -45,6 +49,8 @@
       </mat-error>
     </mat-form-field>
 
+    <mat-card-title>Contatos</mat-card-title>
+
     <!-- Contato -->
     <mat-form-field appearance="outline">
       <mat-label>Celular</mat-label>
@@ -53,6 +59,7 @@
              [(ngModel)]="supplier.conCelular"
              name="conCelular"
              required
+             mask="(00) 00000-0000"
              #conCelular="ngModel">
       <mat-error *ngIf="conCelular.invalid && conCelular.touched">
         Celular é obrigatório.
@@ -64,6 +71,7 @@
       <input matInput
              placeholder="(00) 0000-0000"
              [(ngModel)]="supplier.conTelefoneComercial"
+             mask="(00) 00000-0000"
              name="conTelefoneComercial">
     </mat-form-field>
 
@@ -75,11 +83,15 @@
              name="conEmail"
              type="email"
              required
+              pattern="^[a-zA-Z0-9._%+-]+@gmail\.com$"
+              maxlength="55"
              #conEmail="ngModel">
       <mat-error *ngIf="conEmail.invalid && conEmail.touched">
         Email inválido ou obrigatório.
       </mat-error>
     </mat-form-field>
+
+        <mat-card-title>Endereço</mat-card-title>
 
     <!-- Endereço -->
     <mat-form-field appearance="outline">
@@ -88,8 +100,10 @@
              [(ngModel)]="supplier.endRua"
              name="endRua"
              required
-             #endRua="ngModel">
-      <mat-error *ngIf="endRua.invalid && endRua.touched">
+             #endRua="ngModel"
+             maxlength="50"
+      (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
+             <mat-error *ngIf="endRua.invalid && endRua.touched">
         Rua é obrigatória.
       </mat-error>
     </mat-form-field>
@@ -100,7 +114,9 @@
              [(ngModel)]="supplier.endNumero"
              name="endNumero"
              required
-             #endNumero="ngModel">
+             #endNumero="ngModel"
+             maxlength="15"
+            (keypress)="apenasNumeros($event)">
       <mat-error *ngIf="endNumero.invalid && endNumero.touched">
         Número é obrigatório.
       </mat-error>
@@ -112,7 +128,9 @@
              [(ngModel)]="supplier.endCidade"
              name="endCidade"
              required
-             #endCidade="ngModel">
+             #endCidade="ngModel"
+             maxlength="100"
+             (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endCidade.invalid && endCidade.touched">
         Cidade é obrigatória.
       </mat-error>
@@ -124,7 +142,10 @@
              [(ngModel)]="supplier.endCep"
              name="endCep"
              required
-             #endCep="ngModel">
+             #endCep="ngModel"
+             maxlength="8"
+               (keypress)="apenasNumeros($event)"
+         (paste)="bloquearPasteNumeros($event)">  
       <mat-error *ngIf="endCep.invalid && endCep.touched">
         CEP é obrigatório.
       </mat-error>
@@ -136,7 +157,9 @@
              [(ngModel)]="supplier.endEstado"
              name="endEstado"
              required
-             #endEstado="ngModel">
+             #endEstado="ngModel"
+             maxlength="100"
+          (keypress)="apenasLetras($event)" (paste)="bloquearPaste($event)">
       <mat-error *ngIf="endEstado.invalid && endEstado.touched">
         Estado é obrigatório.
       </mat-error>
