--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -36,6 +36,10 @@
             <i class="material-icons">category</i>
             <span>Categorias</span>
           </a>
+            <a mat-list-item routerLink="/suppliers">
+            <i class="material-icons">local_shipping</i>
+            <span>Fncd</span>
+          </a>
         </mat-nav-list>
       </mat-expansion-panel>
 
@@ -60,11 +64,6 @@
           </a>
         </mat-nav-list>
       </mat-expansion-panel>
-
-    <a mat-list-item routerLink="/suppliers">
-        <i class="material-icons">local_shipping</i>
-        <span>Fornecedores</span>
-      </a>
 
 
       <a mat-list-item routerLink="/paymentMethods">
