--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,9 +1,6 @@
 <mat-card class="home mat-elevation-z3">
-  <!-- Título do cartão -->
-  <mat-card-title class="title">Sistema Auto-Peças</mat-card-title>
-  
-  <!-- Subtítulo do cartão -->
-  <mat-card-subtitle class="subtitle">
-      Em desenvolvimento.
-  </mat-card-subtitle>
+  <div class="card-content">
+    <mat-card-title class="title">Sistema Auto-Peças</mat-card-title>
+    <mat-card-subtitle class="subtitle">Em desenvolvimento.</mat-card-subtitle>
+  </div>
 </mat-card>
