--- a/src/app/component/cliente/cliente-create/cliente-create.component.css
+++ b/src/app/component/cliente/cliente-create/cliente-create.component.css
@@ -11,14 +11,15 @@ form{
     gap: 10px;
 }
 
+
 button{
-    background-color: #4180ab; /* Azul */
+    background-color: #77181e; /* Azul */
     border: none; /* Sem borda */
     color: #f0e4e4; /* Texto branco */
-    padding: 15px 32px;; /* Espaçamento interno */
+    padding: 15px 32px; /* Espaçamento interno */
     text-align: center; /* Centraliza o texto */
     text-decoration: none; /* Remove sublinhado */
-    display: table-cell; /* Permite definir largura e altura */
+    display: inline-block; /* Permite definir largura e altura */
     font-size: 16px; /* Tamanho da fonte */
     margin: 4px 2px; /* Margem */
     cursor: pointer; /* Muda o cursor ao passar o mouse */
@@ -27,7 +28,7 @@ button{
     }
    
     button:hover {
-    background-color: #316c94; /* Azul mais escuro ao passar o mouse */
+    background-color: #5f0b10; /* Azul mais escuro ao passar o mouse */
     }
    
     button:active {
