--- a/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
+++ b/src/app/component/paymentMethod/payment-method-read/payment-method-read.component.html
@@ -37,7 +37,7 @@
     
     <ng-container matColumnDef="fpgTaxaAdicional">
       <th mat-header-cell *matHeaderCellDef>Taxa Adicional</th>
-      <td mat-cell *matCellDef="let row">{{row.fpgTaxaAdicional}}</td>
+      <td mat-cell *matCellDef="let row">{{row.fpgTaxaAdicional}}%</td>
     </ng-container>
 
 
