--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar class="header" color="primary" mat-elevation-z4>
 
-
   <!-- Logo -->
   <span class="logo-container">
     <a routerLink="/">
@@ -8,21 +7,12 @@
     </a>
   </span>
 
-  <!-- Menu de navegação -->
+  <!-- Espaçador para empurrar o menu de navegação para a direita -->
+  <span class="spacer"></span>
+
+  <!-- Menu de navegação movido para a direita -->
   <span class="nav-links">
     <a mat-button routerLink="/clientes"><i class="material-icons">info</i> Sobre</a>
   </span>
 
-  <!-- Espaçador para empurrar os itens da direita -->
-  <span class="spacer"></span>
-
-  <!-- Nome do usuário -->
-  <span class="user-info">
-    <i class="material-icons">account_circle</i> Olá, Admin
-  </span>
-
-  <!-- Botão de logout -->
-  <button mat-icon-button aria-label="Logout">
-    <i class="material-icons">logout</i>
-  </button>
 </mat-toolbar>
