--- a/src/app/component/product/product-read/product-read.component.html
+++ b/src/app/component/product/product-read/product-read.component.html
@@ -1,72 +1,90 @@
+<!-- Barra de pesquisa separada -->
+<div class="barra-pesquisa">
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Nome</mat-label>
+    <input matInput (input)="onFilterChange('nome', $event)" placeholder="Nome">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Categoria</mat-label>
+    <input matInput (input)="onFilterChange('categoria', $event)" placeholder="Categoria">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Marca</mat-label>
+    <input matInput (input)="onFilterChange('marca', $event)" placeholder="Marca">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Ativo</mat-label>
+    <mat-select (selectionChange)="onFilterChange('ativo', $event)" placeholder="Ativo">
+      <mat-option value="">Todos</mat-option>
+      <mat-option value="sim">Sim</mat-option>
+      <mat-option value="não">Não</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<!-- Container da tabela -->
 <div class="mat-elevation-z4">
-  <!-- Tabela do Angular Material para exibir a lista de produtos -->
   <table mat-table [dataSource]="products">
 
-    <!-- Definição da coluna para o ID do produto -->
+    <!-- Colunas da tabela -->
+
     <ng-container matColumnDef="proId">
       <th mat-header-cell *matHeaderCellDef>Id</th>
       <td mat-cell *matCellDef="let row">{{row.proId}}</td>
     </ng-container>
 
-    <!-- Definição da coluna para o nome do produto -->
     <ng-container matColumnDef="proNome">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let row">{{row.proNome}}</td>
     </ng-container>
 
-
-    <!-- Definição da coluna para o preço de venda do produto -->
     <ng-container matColumnDef="proPrecoVenda">
       <th mat-header-cell *matHeaderCellDef>Preço de Venda</th>
       <td mat-cell *matCellDef="let row">{{row.proPrecoVenda | currency: 'BRL'}}</td>
     </ng-container>
 
-
-<ng-container matColumnDef="categoria">
-  <th mat-header-cell *matHeaderCellDef>Categoria</th>
-  <td mat-cell *matCellDef="let row">{{ row.categoria?.ctgNome }}</td>
-</ng-container>
+    <ng-container matColumnDef="categoria">
+      <th mat-header-cell *matHeaderCellDef>Categoria</th>
+      <td mat-cell *matCellDef="let row">{{ row.categoria?.ctgNome }}</td>
+    </ng-container>
 
     <ng-container matColumnDef="proQuantidade">
       <th mat-header-cell *matHeaderCellDef>Quantidade</th>
       <td mat-cell *matCellDef="let row">{{row.proQuantidade}}</td>
     </ng-container>
 
-<ng-container matColumnDef="marca">
-  <th mat-header-cell *matHeaderCellDef>Marca</th>
-  <td mat-cell *matCellDef="let row">{{ row.marca?.marNome }}</td>
-</ng-container>
+    <ng-container matColumnDef="marca">
+      <th mat-header-cell *matHeaderCellDef>Marca</th>
+      <td mat-cell *matCellDef="let row">{{ row.marca?.marNome }}</td>
+    </ng-container>
 
-
-<ng-container matColumnDef="fornecedor">
-  <th mat-header-cell *matHeaderCellDef>Fornecedor</th>
-  <td mat-cell *matCellDef="let row">{{ row.fornecedor?.forNomeFantasia }}</td>
-</ng-container>
+    <ng-container matColumnDef="fornecedor">
+      <th mat-header-cell *matHeaderCellDef>Fornecedor</th>
+      <td mat-cell *matCellDef="let row">{{ row.fornecedor?.forNomeFantasia }}</td>
+    </ng-container>
 
     <ng-container matColumnDef="proAtivo">
       <th mat-header-cell *matHeaderCellDef>Ativo</th>
-   <td mat-cell *matCellDef="let row">{{ row.proAtivo ? 'Sim' : 'Não' }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.proAtivo ? 'Sim' : 'Não' }}</td>
     </ng-container>
 
-
-
-
-    <!-- Definição da coluna para ações (editar e deletar) -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>                    
       <td mat-cell *matCellDef="let row">
-          <a routerLink="/products/update/{{ row.proId }}" class="edit">
-              <i class="material-icons">edit</i>
-          </a>
-          <a routerLink="/products/delete/{{ row.proId }}" class="delete">
-              <i class="material-icons">delete</i>
-          </a>
+        <a routerLink="/products/update/{{ row.proId }}" class="edit">
+          <i class="material-icons">edit</i>
+        </a>
+        <a routerLink="/products/delete/{{ row.proId }}" class="delete">
+          <i class="material-icons">delete</i>
+        </a>
       </td>
     </ng-container>
 
-    <!-- Linhas do cabeçalho da tabela -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <!-- Linhas do corpo da tabela -->
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
   </table>
 </div>
