--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -15,7 +15,7 @@
     <!-- Menu com botões para navegação -->
     <div class="menu-options">
       <button class="btn-primary" routerLink="/vendas">Visualizar Vendas</button>
-      <button class="btn-primary" routerLink="/produtos">Visualizar Produtos</button>
+      <button class="btn-primary" routerLink="/products">Visualizar Produtos</button>
     </div>
 
     <!-- Caixa de aviso para dados vinculados inativos -->
