--- a/src/app/component/cliente/cliente-read/cliente-read.component.html
+++ b/src/app/component/cliente/cliente-read/cliente-read.component.html
@@ -1,5 +1,30 @@
+<!-- Barra de pesquisa separada -->
+<div class="barra-pesquisa">
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Nome</mat-label>
+    <input matInput (input)="onFilterChange('nome', $event)" placeholder="Nome">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Cpf</mat-label>
+    <input matInput  (input)="onFilterChange('cpf', $event)" placeholder="Cpf">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Email</mat-label>
+    <input matInput (input)="onFilterChange('email', $event)" placeholder="Email">
+  </mat-form-field>
+
+</div>
+
+
+
+
+
 <div class="mat-elevation-z4">
     <table mat-table [dataSource]="clientes">
+
+
 <ng-container matColumnDef="cliId">
     <th mat-header-cell *matHeaderCellDef>Id</th>
     <td mat-cell *matCellDef="let row">{{row.cliId}}</td>
