--- a/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
+++ b/src/app/component/funcionario/funcionario-read/funcionario-read.component.html
@@ -1,3 +1,29 @@
+<!-- Barra de pesquisa separada -->
+<div class="barra-pesquisa">
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Nome</mat-label>
+    <input matInput (input)="onFilterChange('nome', $event)" placeholder="Nome">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Cpf</mat-label>
+    <input matInput (input)="onFilterChange('cpf', $event)" placeholder="Cpf">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Pesquisar Email</mat-label>
+    <input matInput (input)="onFilterChange('email', $event)" placeholder="Email">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="search-bar">
+    <mat-label>Data de admissão</mat-label>
+    <input matInput
+           placeholder="dd/mm/aaaa"
+           mask="00/00/0000"
+           (input)="onFilterChange('dataAdmissao', $event)">
+  </mat-form-field>
+
+</div>
 <div class="mat-elevation-z4">
     <table mat-table [dataSource]="funcionarios">
 <ng-container matColumnDef="funId">
